<resources>
    <string name="app_name">Ejercicio1</string>
    <string name="Data1_Name">Name</string>
    <string name="Data2_Surname">Surname</string>
    <string name="Data3_Birth">Date of Birth</string>
    <string name="Button1_Calculate">Calculate</string>
    <string name="Hint1_Name">Your name</string>
    <string name="Hint2_Surname">Your surname</string>
    <string name="Hint3_Date">Birthdate</string>
    <string name="Filled_Date">%2$d/%1$d/%3$d</string>
    <string name="Format_Date">MM/dd/yyyy</string>
    <string name="Fail_Name">Invalid name</string>
    <string name="Fail_Surname">Invalid surname</string>
    <string name="Fail_Date">Invalid date</string>
    <string name="Zodiac0">Capricorn</string>
    <string name="Zodiac1">Aquarius</string>
    <string name="Zodiac2">Pisces</string>
    <string name="Zodiac3">Aries</string>
    <string name="Zodiac4">Taurus</string>
    <string name="Zodiac5">Gemini</string>
    <string name="Zodiac6">Cancer</string>
    <string name="Zodiac7">Leo</string>
    <string name="Zodiac8">Virgo</string>
    <string name="Zodiac9">Libra</string>
    <string name="Zodiac10">Scorpio</string>
    <string name="Zodiac11">Sagittarius</string>
    <string name="Chinese_Zodiac0">Monkey</string>
    <string name="Chinese_Zodiac1">Rooster</string>
    <string name="Chinese_Zodiac2">Dog</string>
    <string name="Chinese_Zodiac3">Pig</string>
    <string name="Chinese_Zodiac4">Rat</string>
    <string name="Chinese_Zodiac5">Ox</string>
    <string name="Chinese_Zodiac6">Tiger</string>
    <string name="Chinese_Zodiac7">Rabbit</string>
    <string name="Chinese_Zodiac8">Dragon</string>
    <string name="Chinese_Zodiac9">Snake</string>
    <string name="Chinese_Zodiac10">Horse</string>
    <string name="Chinese_Zodiac11">Sheep</string>
    <string name="Result_RFC">RFC: %1$s</string>
    <string name="Result_Zodiac">Zodiac sign: %1$s</string>
    <string name="Result_ChineseZodiac">Chinese zodiac sign: %1$s</string>
    <string name="Button_Share">Share</string>
    <string name="Message_Share">Now you know me better!</string>
    <string name="Message_ShareSubject">Let you friends know!</string>
    <string name="Message_ShareUsing">Share using</string>
    <string name="Message_ShareCancel">Cancel</string>
    <string name="Message_Results">Results</string>
    <string name="Result_Age">Age: %1$s</string>
</resources>
